--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,70 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
+*{
+	list-style: none;
+	text-decoration: none;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: 'Open Sans', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+	background: #f5f6fa;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.container {  
+	display: flex;  
+	padding: 25px;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+
+  .container li{
+	
+	  padding: 25px;
+	  color:white; 
   }
-  to {
-    transform: rotate(360deg);
+
+  /* .calling{
+	  text-align: center;
+	  display:grid;
+  } */
+
+  /* .btn{
+	  height: 25px;
+	  width:25px;
+	  background-color: #f4fbff;
+	  text-align: center;
+  } */
+
+  .container li:hover {
+	/* hover  */
+	/* cursor:pointer; */
+	/* background-color:cyan; */
+	background-color:black;
+	transition: 0.7s;
+	
   }
+
+.wrapper .section{
+	width:100%;
+	transition: all 0.5s ease;
+}
+
+.wrapper .section .top_navbar{
+	background: rgb(7, 105, 185);
+	height: 50px;
+	display: flex;
+	align-items: center;
+}
+
+.wrapper .section .top_navbar .hamburger a{
+	font-size: 28px;
+	color: #f4fbff;
+}
+
+body.active .wrapper .section{
+	margin-left: 0;
+	width: 100%;
 }
